updated missing dependencies flask

--- a/presidio-anonymizer/Dockerfile
+++ b/presidio-anonymizer/Dockerfile
@@ -1,14 +1,28 @@
 FROM python:3.9-slim
 
+# Define build arguments and environment variables
 ARG NAME
 ENV PIP_NO_CACHE_DIR=1
+
+# Set working directory
 WORKDIR /usr/bin/${NAME}
 
-COPY ./pyproject.toml /usr/bin/${NAME}/
-COPY ./README.md /usr/bin/${NAME}/
-RUN pip install poetry && poetry install --no-root --only=main -E server
+# Install essential build tools and Poetry
+RUN apt-get update && apt-get install -y build-essential curl \
+  && curl -sSL https://install.python-poetry.org | python3 - \
+  && apt-get clean
 
-COPY . /usr/bin/${NAME}/
+# Copy project files
+COPY pyproject.toml poetry.lock* ./
 
-EXPOSE ${PORT}
-CMD poetry run python app.py
+# Install project dependencies including Flask
+RUN poetry install --no-root -E server
+
+# Copy the rest of the application files
+COPY . .
+
+# Expose the port that the app runs on
+EXPOSE 8080
+
+# Command to run the application
+CMD ["poetry", "run", "python", "app.py", "--host", "0.0.0.0"]
