--- a/presidio-analyzer/Dockerfile
+++ b/presidio-analyzer/Dockerfile
@@ -1,4 +1,3 @@
-# Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
 # Define build arguments and environment variables
@@ -19,7 +18,7 @@ COPY ${ANALYZER_CONF_FILE} ./
 COPY ${RECOGNIZER_REGISTRY_CONF_FILE} ./
 COPY ${NLP_CONF_FILE} ./
 
-# Copy the current directory contents into the container at /app
+# Copy the current directory contents into the container
 COPY . .
 
 # Upgrade pip to the latest version
@@ -34,8 +33,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Verify Flask installation
 RUN python -c "import flask; print('Flask is installed')"
 
-# Expose the port that the app runs on
-EXPOSE 8080
+# Log installed packages
+RUN pip list
 
-# Command to run the application
-CMD ["python", "app.py", "--host", "0.0.0.0"]
+# Verify packages in runtime environment
+CMD ["sh", "-c", "pip list && python -c 'import flask; print(\"Flask is installed\")' && python app.py --host 0.0.0.0"]
